--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,35 @@
 /* Include Eric Meyer's Reset CSS 2.0 */
 @import "reset.css";
 
+html, body {
+    height: 100%;
+}
+
+body {
+    background-color: lightblue;
+}
+
+h1 {
+    font-size: 32px;
+    font-weight: bolder;
+}
+
+p {
+    font-size: 18px;
+}
+
+.bg-orange {
+    background-color: rgb(212, 124, 1);
+}
+
+.bg-tan {
+    background-color: blanchedalmond;
+}
+
+.bg-aqua {
+    background-color: aqua;
+}
+
+.bg-teal {
+    background-color: teal;
+}
