--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,11 @@
 
 body {
     height: 100vh;
-    background-color: lightblue;
+    background: url(../images/background.jpg) repeat center center fixed;
+    -webkit-background-size: auto;
+    -moz-background-size: auto;
+    -o-background-size: auto;
+    background-size: auto;
 }
 
 .main-container {
